# ClashMetaX

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  generate_resources.py
.github/workflows/: ci.yml  prerelease.yml
src/: http_server.h  main.cpp  mihomo.rc  mihomo_manager.cpp  mihomo_manager.h  mihomo_resource.h  proxy_manager.h  resource.h  resource.rc  settings_dialog.h  tray_icon.cpp  tray_icon.h  webui.rc  webui_resource.h
tools/: generate_icons.py  generate_mihomo_manifest.py  mihomo_embed.py  zashboard_update.py
tools/mihomo/: config.yaml  mihomo.manifest
